--- a/roles/vm_setup/tasks/setup.yml
+++ b/roles/vm_setup/tasks/setup.yml
@@ -16,6 +16,15 @@
     - "{{ nets }}"
     - "{{ vms }}"
 
+- name: add nested VMs in the DHCP pool
+  virt_net:
+      name: "{{ item[0].name }}"
+      command: modify
+      xml: "<host mac='{{ item[1].mac }}' name='{{ item[1].name }}' ip='{{ item[1].ip }}'/>"
+  with_nested:
+    - "{{ nets }}"
+    - "{{ vmsL1 }}"
+
 - name: create VMs disk
   command: "qemu-img create -f qcow2 -F qcow2 -b {{ base_disk_image  }} {{ item.disk }}"
   with_items: "{{ vms }}"
