--- a/roles/vm_pre/defaults/main.yml
+++ b/roles/vm_pre/defaults/main.yml
@@ -2,13 +2,16 @@
 vm_loaded: 1
 
 vms:
-    - {name: vsockvm0, cid: 3, disk: /tmp/vsockvm0.img, disk_base: /tmp/vsockvmimages/fedora.img, ip: 192.168.133.2, mac: "FC:C2:33:00:33:32" }
+    - {name: vsockvm0, cid: 3, disk: /tmp/vsockvm0.img, disk_base: /tmp/vsockvmimages/fedora.img, ip: 192.168.133.2, mac: "FC:C2:33:00:33:32", if: vsocknet0}
 
-vms_nested:
-    - {name: vsockvm1, cid: 4, disk: /tmp/vsockvm1.img, disk_base: /tmp/vsockvmimages/fedora.  img, ip: 192.168.133.3, mac: "FC:C2:33:00:33:33" }
+nested_vms:
+    - {name: vsockvm1, cid: 4, disk: /tmp/vsockvm1.img, disk_base: /tmp/vsockvmimages/fedora.img, ip: 192.168.133.3, mac: "FC:C2:33:00:33:33", if: vsockbr0}
 
 nets:
-    - {name: vsockbr0, ip: 192.168.133.1, netmask: 255.255.255.0, dhcp_start: 192.168.133.2, dhcp_end: 192.168.133.254}
+    - {name: vsocknet0, ip: 192.168.133.1, netmask: 255.255.255.0, dhcp_start: 192.168.133.2, dhcp_end: 192.168.133.254}
+
+bridges:
+    - {name: vsockbr0, if: ens3}
 
 pools:
     - {name: vsockpool0, xml: "/tmp/vsockpool0.xml", host: 192.168.133.1, remote_dir: "/home/stefano/works/virt/images", local_dir: "/tmp/vsockvmimages"}
