--- a/roles/vm_setup/tasks/setup.yml
+++ b/roles/vm_setup/tasks/setup.yml
@@ -1,5 +1,14 @@
 ---
 
+- name: Start libvirtd service
+  service:
+    name: libvirtd
+    state: started
+
+- name: Disable SELinux
+  selinux:
+    state: disabled
+
 - name: define networks
   virt_net:
       name: "{{ item.name }}"
