vm_nested: stop firewalld service

--- a/roles/vm_nested_setup/tasks/setup.yml
+++ b/roles/vm_nested_setup/tasks/setup.yml
@@ -4,6 +4,11 @@
     name: libvirtd
     state: started
 
+- name: Stop firewalld service
+  service:
+    name: firewalld
+    state: stopped
+
 - name: Disable SELinux
   selinux:
     state: disabled
