nfs_server: setup firewalld rules

--- a/roles/nfs_server_setup/tasks/setup.yml
+++ b/roles/nfs_server_setup/tasks/setup.yml
@@ -17,3 +17,20 @@
     - rpcbind
     - nfs-server
 
+- firewalld:
+    service: nfs3
+    zone: libvirt
+    permanent: no
+    state: enabled
+
+- firewalld:
+    service: mountd
+    zone: libvirt
+    permanent: no
+    state: enabled
+
+- firewalld:
+    service: rpc-bind
+    zone: libvirt
+    permanent: no
+    state: enabled
