--- a/playbooks/vars/sibling-vms-vars.yml
+++ b/playbooks/vars/sibling-vms-vars.yml
@@ -1,4 +1,4 @@
 ---
-vms:
+l0_vms:
     - {name: vsockvm0, cid: 3, disk: /tmp/vsockvm0.img, disk_base: /tmp/vsockvmimages/f30-demo.qcow2, ip: 192.168.133.2, mac: "FC:C2:33:00:33:32", if: vsocknet0, gdb: 12333}
     - {name: vsockvm1, cid: 4, disk: /tmp/vsockvm1.img, disk_base: /tmp/vsockvmimages/f30-demo.qcow2, ip: 192.168.133.3, mac: "FC:C2:33:00:33:33", if: vsocknet0, gdb: 12344}
