--- a/roles/vm_nested_cleanup/tasks/cleanup.yml
+++ b/roles/vm_nested_cleanup/tasks/cleanup.yml
@@ -9,14 +9,14 @@
   virt:
       name: "{{ item.name }}"
       state: shutdown
-  with_items: "{{ vms }}"
+  with_items: "{{ l1_vms }}"
   when: item.name in defined_vms.list_vms
 
 - name: undefine VMs
   virt:
       name: "{{ item.name }}"
       command: undefine
-  with_items: "{{ vms }}"
+  with_items: "{{ l1_vms }}"
   when: item.name in defined_vms.list_vms
 
 - name: stop pools
@@ -28,9 +28,3 @@
   command: "virsh pool-undefine {{ item.name }}"
   with_items: "{{ pools }}"
   ignore_errors: yes
-
-- name: undefine networks
-  virt_net:
-      name: "{{ item.name }}"
-      state: absent
-  with_items: "{{ nets }}"
