--- a/playbooks/vars/nested-vm-vars.yml
+++ b/playbooks/vars/nested-vm-vars.yml
@@ -1,9 +1,9 @@
 ---
-vms:
-    - {name: vsockvm0, cid: 3, disk: /tmp/vsockvm0.img, disk_base: /tmp/vsockvmimages/f30-demo.qcow2, ip: 192.168.133.2, mac: "FC:C2:33:00:33:32", if: vsocknet0, gdb: 1234}
+l0_vms:
+    - {name: vsockvm0, cid: 3, disk: /tmp/vsockvm0.img, disk_base: /tmp/vsockvmimages/f30-demo.qcow2, ip: 192.168.133.2, mac: "FC:C2:33:00:34:32", if: vsocknet0, gdb: 1234}
 
-nested_vms:
-    - {name: vsockvm1, cid: 4, disk: /tmp/vsockvm1.img, disk_base: /tmp/vsockvmimages/f30-demo.qcow2, ip: 192.168.133.3, mac: "FC:C2:33:00:33:33", if: vsockbr0, gdb: 1234}
+l1_vms:
+    - {name: vsockvm1, cid: 4, disk: /tmp/vsockvm1.img, disk_base: /tmp/vsockvmimages/f30-demo.qcow2, ip: 192.168.133.3, mac: "FC:C2:33:00:34:33", if: vsockbr0, gdb: 1234}
 
-bridges:
+l1_bridges:
     - {name: vsockbr0, if: ens3}
