setup: set SELinux in permissive mode

--- a/roles/vm_setup/tasks/setup.yml
+++ b/roles/vm_setup/tasks/setup.yml
@@ -7,7 +7,8 @@
 
 - name: Disable SELinux
   selinux:
-    state: disabled
+    policy: targeted
+    state: permissive
 
 - name: define networks
   virt_net:
