--- a/roles/vm_nested_setup/tasks/setup.yml
+++ b/roles/vm_nested_setup/tasks/setup.yml
@@ -11,7 +11,8 @@
 
 - name: Disable SELinux
   selinux:
-    state: disabled
+    policy: targeted
+    state: permissive
 
 - copy:
     src: vsockbridge.sh
