--- a/playbooks/vsock-test-suite.yml
+++ b/playbooks/vsock-test-suite.yml
@@ -33,6 +33,10 @@
       - debug:
           msg: "Run loopback tests"
   roles:
+      - role: vsock_test_kernel
+        vars:
+          vsock_test_server: { port: "12345", cid: "1" }
+          vsock_test_client: { host: "127.0.0.1", port: "12345", cid: "1" }
       - role: vsock_test_iperf
         vars:
           iperf_server: { param: "-1" }
@@ -53,7 +57,14 @@
 - hosts: vsockvm0
   gather_facts: no
   become: yes
+  vars_files:
+      - vars/common-vars.yml
+      - vars/nested-vm-vars.yml
   roles:
+      - role: vsock_test_kernel
+        vars:
+          vsock_test_server: { port: "12345", cid: "{{ l1_vms[0].cid }}" }
+          vsock_test_client:
       - role: vsock_test_iperf
         vars:
           iperf_server: { param: "-1" }
@@ -62,7 +73,14 @@
 - hosts: vsockvm1
   gather_facts: no
   become: yes
+  vars_files:
+      - vars/common-vars.yml
+      - vars/nested-vm-vars.yml
   roles:
+      - role: vsock_test_kernel
+        vars:
+          vsock_test_server:
+          vsock_test_client: { host: "{{ l0_vms[0].ip }}", port: "12345", cid: "2" }
       - role: vsock_test_iperf
         vars:
           iperf_server:
@@ -71,7 +89,14 @@
 - hosts: vsockvm1
   gather_facts: no
   become: yes
+  vars_files:
+      - vars/common-vars.yml
+      - vars/nested-vm-vars.yml
   roles:
+      - role: vsock_test_kernel
+        vars:
+          vsock_test_server: { port: "12345", cid: "{{ 2 }}" }
+          vsock_test_client:
       - role: vsock_test_iperf
         vars:
           iperf_server: { param: "-1" }
@@ -84,6 +109,10 @@
       - vars/common-vars.yml
       - vars/nested-vm-vars.yml
   roles:
+      - role: vsock_test_kernel
+        vars:
+          vsock_test_server:
+          vsock_test_client: { host: "{{ l1_vms[0].ip }}", port: "12345", cid: "{{ l1_vms[0].cid }}" }
       - role: vsock_test_iperf
         vars:
           iperf_server:
