playbooks/sibling-vms: add tags (setup, pause, cleanup)

--- a/playbooks/sibling-vms.yml
+++ b/playbooks/sibling-vms.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: localhost
   become: yes
+  tags:
+      - setup
   vars_files:
       - vars/common-vars.yml
       - vars/sibling-vms-vars.yml
@@ -13,30 +15,36 @@
 - hosts: vsockvm0
   gather_facts: no
   become: yes
+  tags:
+      - setup
   pre_tasks:
       - name: Wait for vsockvm0 to become reachable
         wait_for_connection:
-
       - name: Gather facts for first time
         setup:
 
 - hosts: vsockvm1
   gather_facts: no
   become: yes
+  tags:
+      - setup
   pre_tasks:
       - name: Wait for vsockvm1 to become reachable
         wait_for_connection:
-
       - name: Gather facts for first time
         setup:
 
 - hosts: localhost
+  tags:
+      - pause
   tasks:
       - pause:
           prompt: "Enter to pass next phase"
 
 - hosts: localhost
   become: yes
+  tags:
+      - cleanup
   vars_files:
       - vars/common-vars.yml
       - vars/sibling-vms-vars.yml
