playbooks: fix 'pause' message

--- a/playbooks/sibling-vms.yml
+++ b/playbooks/sibling-vms.yml
@@ -39,7 +39,7 @@
       - pause
   tasks:
       - pause:
-          prompt: "Enter to pass next phase"
+          prompt: "Press enter to proceed to the cleaning phase"
 
 - hosts: localhost
   become: yes
