--- a/playbooks/vsock-test-suite.yml
+++ b/playbooks/vsock-test-suite.yml
@@ -90,8 +90,7 @@
   roles:
       - role: vsock_test_kernel
         vars:
-          # QEMU doesn't support seqpacket for now, let's skip 6 and 7
-          vsock_test_server: { port: "12345", cid: "{{ l1_vms[0].cid }}", param: "--skip 6 --skip 7" }
+          vsock_test_server: { port: "12345", cid: "{{ l1_vms[0].cid }}" }
           vsock_test_client:
       - role: vsock_test_iperf
         vars:
@@ -110,8 +109,7 @@
       - role: vsock_test_kernel
         vars:
           vsock_test_server:
-          # QEMU doesn't support seqpacket for now, let's skip 6 and 7
-          vsock_test_client: { host: "{{ l0_vms[0].ip }}", port: "12345", cid: "2", param: "--skip 6 --skip 7" }
+          vsock_test_client: { host: "{{ l0_vms[0].ip }}", port: "12345", cid: "2" }
       - role: vsock_test_iperf
         vars:
           iperf_server:
@@ -131,8 +129,7 @@
   roles:
       - role: vsock_test_kernel
         vars:
-          # QEMU doesn't support seqpacket for now, let's skip 6 and 7
-          vsock_test_server: { port: "12345", cid: "{{ 2 }}", param: "--skip 6 --skip 7" }
+          vsock_test_server: { port: "12345", cid: "{{ 2 }}" }
           vsock_test_client:
       - role: vsock_test_iperf
         vars:
@@ -151,8 +148,7 @@
       - role: vsock_test_kernel
         vars:
           vsock_test_server:
-          # QEMU doesn't support seqpacket for now, let's skip 6 and 7
-          vsock_test_client: { host: "{{ l1_vms[0].ip }}", port: "12345", cid: "{{ l1_vms[0].cid }}", param: "--skip 6 --skip 7" }
+          vsock_test_client: { host: "{{ l1_vms[0].ip }}", port: "12345", cid: "{{ l1_vms[0].cid }}" }
       - role: vsock_test_iperf
         vars:
           iperf_server:
