--- a/roles/vm_setup/tasks/setup.yml
+++ b/roles/vm_setup/tasks/setup.yml
@@ -11,7 +11,7 @@
     state: permissive
 
 - name: Setup nsswitch.conf for libvirt
-  shell: 'grep libvirt /etc/nsswitch.conf || sed -i s/"files myhostname"/"files myhostname libvirt libvirt_guest"/g /etc/nsswitch.conf'
+  shell: 'grep libvirt /etc/nsswitch.conf || sed -i s/"files myhostname"/"files libvirt libvirt_guest myhostname"/g /etc/nsswitch.conf'
 
 - name: define networks
   virt_net:
