--- a/playbooks/vsock-test-suite.yml
+++ b/playbooks/vsock-test-suite.yml
@@ -49,6 +49,10 @@
         vars:
           vsock_test_server: { port: "12345", cid: "1" }
           vsock_test_client: { host: "127.0.0.1", port: "12345", cid: "1" }
+      - role: vsock_uring_test_kernel
+        vars:
+          vsock_uring_test_server: { port: "54321", cid: "1" }
+          vsock_uring_test_client: { host: "127.0.0.1", port: "54321", cid: "1" }
       - role: vsock_test_iperf
         vars:
           iperf_server: { param: "-1" }
@@ -92,6 +96,10 @@
         vars:
           vsock_test_server: { port: "12345", cid: "{{ l1_vms[0].cid }}" }
           vsock_test_client:
+      - role: vsock_uring_test_kernel
+        vars:
+          vsock_uring_test_server: { port: "54321", cid: "{{ l1_vms[0].cid }}" }
+          vsock_uring_test_client:
       - role: vsock_test_iperf
         vars:
           iperf_server: { param: "-1" }
@@ -110,6 +118,10 @@
         vars:
           vsock_test_server:
           vsock_test_client: { host: "{{ l0_vms[0].ip }}", port: "12345", cid: "2" }
+      - role: vsock_uring_test_kernel
+        vars:
+          vsock_uring_test_server:
+          vsock_uring_test_client: { host: "{{ l0_vms[0].ip }}", port: "54321", cid: "2" }
       - role: vsock_test_iperf
         vars:
           iperf_server:
@@ -131,6 +143,10 @@
         vars:
           vsock_test_server: { port: "12345", cid: "{{ 2 }}" }
           vsock_test_client:
+      - role: vsock_uring_test_kernel
+        vars:
+          vsock_uring_test_server: { port: "54321", cid: "{{ 2 }}" }
+          vsock_test_client:
       - role: vsock_test_iperf
         vars:
           iperf_server: { param: "-1" }
@@ -149,6 +165,10 @@
         vars:
           vsock_test_server:
           vsock_test_client: { host: "{{ l1_vms[0].ip }}", port: "12345", cid: "{{ l1_vms[0].cid }}" }
+      - role: vsock_uring_test_kernel
+        vars:
+          vsock_uring_test_server:
+          vsock_uring_test_client: { host: "{{ l1_vms[0].ip }}", port: "54321", cid: "{{ l1_vms[0].cid }}" }
       - role: vsock_test_iperf
         vars:
           iperf_server:
