--- a/roles/vm_setup/tasks/setup.yml
+++ b/roles/vm_setup/tasks/setup.yml
@@ -13,6 +13,10 @@
 - name: Setup nsswitch.conf for libvirt
   shell: 'grep libvirt /etc/nsswitch.conf || sed -i s/"files myhostname"/"files libvirt libvirt_guest myhostname"/g /etc/nsswitch.conf'
 
+- name: Pause for 5 seconds
+  ansible.builtin.pause:
+    seconds: 5
+
 - name: define networks
   virt_net:
       name: "{{ item.name }}"
