Unload virtio-vsock driver in vsockvm0
This is useful for some tests where issues happen only without G2H driver

--- a/playbooks/vsock-test-suite.yml
+++ b/playbooks/vsock-test-suite.yml
@@ -167,6 +167,10 @@
       - vars/common-vars.yml
       - vars/nested-vm-vars.yml
   pre_tasks:
+      - name: Unload virtio-vsock driver, so we can run next tests without G2H driver in l0
+        modprobe:
+            name: vmw_vsock_virtio_transport
+            state: absent
       - debug:
           msg: "Run test servers in the host"
   roles:
